hocr (0.6.0)

 * can read nikud
 * add command var to the pixbuf structure

 -- Yaacov Zamir <kzamir@walla.co.il>  Tue, 13 Dec 2005 22:13
 
hocr (0.5.1)
  
  * examples now named: hocr, hocr-gtk
  * fix line equation for short lines
  * create different file for different objects
  * use a textbuffer structure
   
  -- Yaacov Zamir <kzamir@walla.co.il>  Sat, 10 Dec 2005 22:13

hocr (0.4.8)

  * Use columns
  * Ignure nikud marks
  * use non horizontal lines
  * add command to the image buffer struct to let user control ocr.
  * add none-used error to the image struct to let peogram return 
    feedback to user

  -- Yaacov Zamir <kzamir@walla.co.il> Wed, 07 Dec 2005 22:13

hocr (0.4.7)

  * Remove cpp (and hocr-qt) bindings, untill API stabilize.

  -- Yaacov Zamir <kzamir@walla.co.il> Wed, 07 Dec 2005 22:13

hocr (0.4.6)

  * Fix a bug in get/set bit functions
  * Add desktop menu entry only if hocr-gtk is made
  * Use gtk toolkit and not gnome to make example more portable
  * Rename the gui example hocr-gtk

  -- Yaacov Zamir <kzamir@walla.co.il> Mon, 21 Nov 2005 00:13
  
hocr (0.4.5a)

  * Ido Kanner reported a buffer overflow on hocr cmd line example, fixed.

  -- Yaacov Zamir <kzamir@walla.co.il> Sun, 04 Sep 2005 22:13
  
hocr (0.4.5)
  
  * Yuval Tanny: idea to make line detection more accurate
    by adding min/max line_coverage consts and a minimum
    finding logic between lines.
    
  * add a HACKING and BUGS files to set guidelines for patches in
    the future.

  * add hocr-qt example and remove qhocr and the bsd things.
  
  -- Yaacov Zamir <kzamir@walla.co.il>  Sun, 21 Aug 2005 02:13
  
hocr (0.4.4)
  
  * add Diego Iastrubni <elcuco@kde.org> qhocr to the examples directory.
    see examles/README_examples and examples/COPYING_examples.
  
  -- Yaacov Zamir <kzamir@walla.co.il>  Fri, 19 Aug 2005 02:13

hocr (0.4.3)
  
  * add C++ bindings
  
  -- Yaacov Zamir <kzamir@walla.co.il>  Thu, 18 Aug 2005 22:13

hocr (0.4.3)
  
  * add hocr man file