@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(hocr, 0.6.0)
+AM_INIT_AUTOMAKE(hocr, 0.6.1)
 AM_MAINTAINER_MODE
 AM_CONFIG_HEADER(config.h)
 VERSION_INFO=0:0:0
