@@ -3,6 +3,6 @@
 EXTRA_DIST = \
 	test*
 
-hocrdocdir = ${prefix}/share/hocr
+hocrdocdir = ${prefix}/share/hocr/tests
 hocrdoc_DATA = \
 	test*
